[gd_scene load_steps=32 format=3 uid="uid://d1ns6eo6ix1np"]

[ext_resource type="Script" path="res://player.gd" id="1_bysvt"]
[ext_resource type="Texture2D" uid="uid://7xx1na5evsm0" path="res://assets/testy, the sprite.png" id="1_ph7ro"]
[ext_resource type="Texture2D" uid="uid://cihfke4i545la" path="res://assets/testy attack.png" id="2_dkpar"]
[ext_resource type="Texture2D" uid="uid://bet6mgiwxo5xs" path="res://assets/attack_down.png" id="3_f1m7v"]
[ext_resource type="Texture2D" uid="uid://dboc8g4bjvp0c" path="res://assets/attack_up.png" id="4_r8bhh"]
[ext_resource type="PackedScene" uid="uid://ba8ndfm1w26hg" path="res://second_chance_menu.tscn" id="4_w2j36"]

[sub_resource type="AtlasTexture" id="AtlasTexture_53ts1"]
atlas = ExtResource("2_dkpar")
region = Rect2(0, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l6hue"]
atlas = ExtResource("2_dkpar")
region = Rect2(128, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5k7n7"]
atlas = ExtResource("2_dkpar")
region = Rect2(256, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_safk1"]
atlas = ExtResource("2_dkpar")
region = Rect2(128, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0t8l2"]
atlas = ExtResource("2_dkpar")
region = Rect2(0, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j33ny"]
atlas = ExtResource("3_f1m7v")
region = Rect2(0, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0uc6l"]
atlas = ExtResource("3_f1m7v")
region = Rect2(64, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_tioce"]
atlas = ExtResource("3_f1m7v")
region = Rect2(128, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5wxgo"]
atlas = ExtResource("3_f1m7v")
region = Rect2(64, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_md7wj"]
atlas = ExtResource("3_f1m7v")
region = Rect2(0, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hwb6a"]
atlas = ExtResource("4_r8bhh")
region = Rect2(0, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1mxsh"]
atlas = ExtResource("4_r8bhh")
region = Rect2(64, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7na0y"]
atlas = ExtResource("4_r8bhh")
region = Rect2(128, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2lf47"]
atlas = ExtResource("4_r8bhh")
region = Rect2(64, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7eshc"]
atlas = ExtResource("4_r8bhh")
region = Rect2(0, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ymrem"]
atlas = ExtResource("1_ph7ro")
region = Rect2(0, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_ir3ob"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_53ts1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6hue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5k7n7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_safk1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0t8l2")
}],
"loop": false,
"name": &"attack",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j33ny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0uc6l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tioce")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5wxgo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_md7wj")
}],
"loop": false,
"name": &"attack_down",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hwb6a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1mxsh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7na0y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2lf47")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7eshc")
}],
"loop": false,
"name": &"attack_up",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ymrem")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uirha"]
size = Vector2(62, 63)

[sub_resource type="LabelSettings" id="LabelSettings_xnc4g"]
font_size = 20
font_color = Color(1, 0.214044, 0.362331, 1)
outline_size = 2
outline_color = Color(0.63092, 0, 0.230428, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6oeys"]
size = Vector2(40, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lagt2"]
size = Vector2(40, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lv0i4"]
size = Vector2(64, 63)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ej13d"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5dxbg"]
bg_color = Color(0.141176, 0.45098, 0.682353, 1)

[sub_resource type="LabelSettings" id="LabelSettings_o65uc"]
font_size = 20
font_color = Color(0.908673, 0.736697, 1.15514e-06, 1)

[node name="player" type="CharacterBody2D"]
slide_on_ceiling = false
script = ExtResource("1_bysvt")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ir3ob")
animation = &"attack_down"
frame = 4
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_uirha")
debug_color = Color(0.635294, 0.341176, 1, 0.505882)

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(0, -50)
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="Label" type="Label" parent="."]
offset_left = -37.0
offset_top = -88.0
offset_right = 40.0
offset_bottom = -29.0
label_settings = SubResource("LabelSettings_xnc4g")
horizontal_alignment = 1
autowrap_mode = 3

[node name="dashing" type="Timer" parent="."]
wait_time = 0.2

[node name="can_dash" type="Timer" parent="."]
wait_time = 0.5

[node name="combo_timer" type="Timer" parent="."]

[node name="attack_range" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="attack_right" type="CollisionShape2D" parent="attack_range"]
position = Vector2(52, 0)
shape = SubResource("RectangleShape2D_6oeys")
disabled = true
debug_color = Color(0.832019, 0, 0.139833, 0.42)

[node name="attack_left" type="CollisionShape2D" parent="attack_range"]
position = Vector2(-52, 0)
shape = SubResource("RectangleShape2D_6oeys")
disabled = true
debug_color = Color(0.832019, 0, 0.139833, 0.42)

[node name="attack_down" type="CollisionShape2D" parent="attack_range"]
position = Vector2(-8.58307e-06, 52)
rotation = 1.5708
shape = SubResource("RectangleShape2D_lagt2")
disabled = true
debug_color = Color(0.832019, 0, 0.139833, 0.42)

[node name="attack_up" type="CollisionShape2D" parent="attack_range"]
position = Vector2(0, -52)
rotation = 1.5708
shape = SubResource("RectangleShape2D_6oeys")
disabled = true
debug_color = Color(0.832019, 0, 0.139833, 0.42)

[node name="body_detection" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="body_detection"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_lv0i4")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer"]
offset_left = 44.0
offset_top = 33.0
offset_right = 489.0
offset_bottom = 70.0
theme_override_styles/background = SubResource("StyleBoxFlat_ej13d")
theme_override_styles/fill = SubResource("StyleBoxFlat_5dxbg")
value = 100.0

[node name="coins" type="Label" parent="CanvasLayer/ProgressBar"]
offset_left = 902.0
offset_top = 4.0
offset_right = 1069.0
offset_bottom = 32.0
text = "Coins: "
label_settings = SubResource("LabelSettings_o65uc")
horizontal_alignment = 2
uppercase = true

[node name="SecondWindMenu" parent="CanvasLayer" instance=ExtResource("4_w2j36")]
visible = false

[node name="left" type="RayCast2D" parent="."]
target_position = Vector2(-38, 0)

[node name="right" type="RayCast2D" parent="."]
target_position = Vector2(38, 0)

[connection signal="timeout" from="dashing" to="." method="_on_dashing_timeout"]
[connection signal="timeout" from="can_dash" to="." method="_on_can_dash_timeout"]
[connection signal="timeout" from="combo_timer" to="." method="_on_combo_timer_timeout"]
[connection signal="body_entered" from="attack_range" to="." method="_on_attack_range_body_entered"]
[connection signal="body_entered" from="body_detection" to="." method="_on_body_detection_body_entered"]
